apps/monitoring/homeassistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ha.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
    - match: Host(`ha.${SECRET_PUBLIC_DOMAIN}`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
